--- a/styles/index.css
+++ b/styles/index.css
@@ -7,11 +7,19 @@ html{
     font-size: 16px;
 }
 body{
-    background-color: #f5f5f7;
+    background-color: #000000;
 
 }
 p{
     font-family: 'Varela', Arial, Helvetica, sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+    font-family: 'rubik', Arial, sans-serif;
 }
 /* תפריט ניווט עליון */
 header{
@@ -36,7 +44,6 @@ header{
 .nav-links {
     list-style: none;
     display: flex;
-    
     justify-content: center;
     align-items: center;
     padding: 0;
@@ -58,51 +65,83 @@ header{
     color: #000000; /* משנה צבע לאפור בעת ריחוף */
 }
 
-
-/* עמודה שמסבירה על השלבים של בנייה עם תמונה שמראה את השלבים */
-.section-3{
-    margin-top: 5rem;
-    height: auto;
+/* השלבים לבניית אתר */
+.stages-container{
+    margin: 2rem 0;
+    text-align: center;
+}
+.stages-header{
+    background-color: white;
+    text-align: center;
+    border-radius: 10px;
+    margin-bottom: 3rem;
+}
+.stages-header h2{
+    font-size: 2.8rem;
+}
+.stages-content{
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 100%;
-    gap: 2rem;
-
-}
-.stages-text{
-    width: 45%;
-    min-width: 30rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem; /* משנה את הרווח בין הכותרת לטקסט */
-    padding-right: 1rem;
-    height: auto;
-    margin-bottom: 5rem;
-    
-}
-.stages-text h2{
-    font-size: 2rem;
-    font-family: 'rubik', Arial, sans-serif;
-    color: #000000;
-
-}
-.stages-text p{
-    font-size: 1.4rem;
-    color: #000000;
+    gap: 1rem;
 }
 .stages{
-    height: auto;
+    border-radius: 10px;
+    background-color: white;
+    min-width: 18rem;
+    width: 15%;
+    height: 18rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    transition: transform 0.5s ease-in-out; /* הופך את האנימציה לחלקה */
+    position: relative;
+
+    
+}
+.stages-container h3{
+    font-size: 2.5rem;
+    top: 0;
+    right: 0.5rem;
+    position: absolute;
+    text-align: right;
+    
+    
+
+}
+.stages-container h4{
+    font-size: 1.8rem;
+    border-bottom: 2px solid black;
+}
+.stages-container p{
+    font-size: 1.2rem
+}
+.stages:hover{
+    transform: scale(1.05);
+}
+
+
+/* של בניית אתר תמונה שמראה את השלבים */
+.stages-photo{
+    width: 100%;
+    height: 34rem;
     min-width: 40rem;
-    width: 45%;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    margin-bottom: 5rem;
+    border: 3px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
  
 }
-.stages .img-container{
+.stages-photo .img-container{
     width: 12rem;
     height: 12rem;
     display: flex;
@@ -112,21 +151,21 @@ header{
     position: relative;
 
 }
-.stages img{
+.stages-photo img{
     width: 50%;
     transition: transform 0.5s ease-in-out;
  
 }
 
-.stages .img-container img:hover{
+.stages-photo .img-container img:hover{
     filter: brightness(1.4) contrast(1.3);
     transform: scale(1.1);
 }
-.stages .small-img-container:hover{
+.stages-photo .small-img-container:hover{
     filter: brightness(1.4) contrast(1.3);
     
 }
-.stages .small-img-container {
+.stages-photo .small-img-container {
     width: 8rem;
     height: 8rem;
     display: flex;
@@ -151,7 +190,7 @@ header{
 .small4 { bottom: calc(50% - 2rem); left: calc(50% - 7.5rem); transform: translate(-50%, 50%); } /* שמאל למטה */
 .small5 { bottom: calc(50% - 2rem); right: calc(50% - 7.5rem); transform: translate(50%, 50%); } /* ימין למטה */
 /* המשך של הלמעלה פשוט סידור הטקסטים ליד התמונות הקטנות */
-.stages .text-container {
+.stages-photo .text-container {
     position: absolute;
     width: 8rem; /* גודל אחיד לכל התיבות */
     font-size: 1rem;
@@ -161,21 +200,23 @@ header{
     
 }
 
-.stages .text-container h4 {
+.stages-photo .text-container h4 {
     font-size: 1.6rem;
     margin-bottom: 0.3rem;
     color: #1d1d1f; /* צבע כהה יותר לכותרת */
 }
 
-.stages .text-container p {
+.stages-photo .text-container p {
     font-size: 1.1rem;
     font-weight: normal;
     color: #555; /* צבע בהיר יותר לטקסט */
 }
-.stages .text-container:hover{
+.stages-photo .text-container:hover{
     filter: brightness(1.4) contrast(1.3);
     
 }
+
+
 
 /* מיקום הטקסט ליד כל תמונה */
 .text1 { bottom: calc(50% - 15.5rem); left: 50%; transform: translateX(-50%); text-align: center;} /* מתחת לתמונה 1 */
@@ -184,8 +225,72 @@ header{
 .text4 { bottom: calc(50% - 4rem); left: calc(50% - 15rem); transform: translate(-50%, 50%); } /* ליד תמונה 4 */
 .text5 { bottom: calc(50% - 4rem); right: calc(50% - 15rem); transform: translate(50%, 50%); } /* ליד תמונה 5 */
 
-.stages .text1 h4{color: #a8dc34;}
-.stages .text2 h4{color: #f8943c;}
-.stages .text3 h4{color: #20c4fc;}
-.stages .text4 h4{color: #f864bc;}
-.stages .text5 h4{color: #48dc94;}
+.stages-photo .text1 h4{color: #a8dc34;}
+.stages-photo .text2 h4{color: #f8943c;}
+.stages-photo .text3 h4{color: #20c4fc;}
+.stages-photo .text4 h4{color: #f864bc;}
+.stages-photo .text5 h4{color: #48dc94;}
+
+/* 
+form פרטי יצירת קשר */
+.form-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.form-container-div{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    flex-direction: column;
+    background: #ffffff;
+    margin: 0rem;
+    padding: 1rem;
+    border-radius: 10px;
+    max-width: 32rem;
+    min-width: 25rem;
+    border: 4px solid  black;
+
+}
+
+input, textarea {
+    width: 100%;
+    padding: 0.8rem;
+    border: none;
+    outline: none;
+    border-bottom: 3px solid  #4d4f52;
+    font-size: 1rem;
+    
+}
+input:focus, textarea:focus {
+    border-bottom: 4px solid #000000;
+}
+textarea{
+    resize: none
+}
+
+button {
+    background: #007BFF;
+    color: white;
+    border: none;
+    padding: 0.8rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%;
+    transition: 0.3s;
+}
+
+button:hover {
+    background: #0056b3;
+}
+.form-container h3{
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 0.8rem;
+}
